<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dummy_text">empty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_name">LazyCure</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="duration">Duration</string>
    <string name="name">Name</string>
    <string name="defaultActivityName">rest</string>
    <string name="deleteTitle">Delete activity</string>
    <string name="deleteMessage">Are you sure you want to delete this activity?</string>
    <string name="activities">Activities:</string>
    <string name="doneButton_text">Done!</string>
    <string name="backButton_text">Back</string>
    <string name="input_hint">&#160;(specify what you are doing)</string>
    <string name="title_about">About LazyCure 1.0</string>
    <string name="title_timelog">Time Log</string>
    <string name="title_settings">Settings</string>
    <string name="title_split">Split activity</string>
    <string name="title_export">Export activities</string>
    <string name="label_start">start: </string>
    <string name="label_duration">duration: </string>
    <string name="delete_title">Delete activity</string>
    <string name="delete_message">Are you sure you want to delete this activity?</string>
    <string name="export_invitation">Please select file type:</string>
    <string name="export_timelog">TimeLog (XML-based)</string>
    <string name="export_Xls">XLS (MS Excel)</string>
    <string name="export_plainText">TXT (plain text)</string>
    <string name="export_button">Export</string>
    <string name="export_LocationHint">You can find timelogs on your SD card in the following folder:</string>
    <string name="export_SuccessfullPlainText">Saved as Plain Text to</string>
    <string name="export_SuccessfullXLS">Saved as XLS file to</string>
    <string name="export_SuccessfullTIMELOG">Saved as Timelog file to</string>
    <string name="export_Failed">Cannot save the file to</string>
    <string name="pref_category_export">Export</string>
    <string name="pref_category_splitting">Splitting</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_appearance_title">Color</string>
    <string name="pref_appearance_summary">Change the activities color</string>
    <string name="pref_export_title">Export</string>
    <string name="pref_export_location_title">Export location</string>
    <string name="pref_export_location_summary">Folder to save the logs</string>
    <string name="pref_export_location_default">LazyCure/TimeLogs</string>
    <string name="pref_split_title">Splitting</string>
    <string name="pref_split_switcher_title">Split activities</string>
    <string name="pref_split_switcher_summary">Allow splitting the activities by separator</string>
    <string name="pref_split_switcher_default">true</string>
    <string name="pref_split_separator_title">Split separator</string>
    <string name="pref_split_separator_summary">Char to separate two activities</string>
    <string name="pref_split_separator_default">,</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_default_activity_title">Default activity mode</string>
    <string name="pref_default_activity_summary">Record the activity when Done button is pressed with empty text</string>
    <string name="pref_default_activity_default">false</string>
    <string name="pref_default_activity_name_title">Name of default activity</string>
    <string name="pref_default_activity_name_summary">Activity will be recorded in default activity mode</string>
    <string name="pref_default_activity_name_default">rest</string>
    <string name="split_button">Split!</string>
    <string name="split_message">Looks like you have done several activities! Please split them into two instances</string>
    <string name="split_first_activity_time_message">Time spent for first activity:</string>
    <string name="menu_export">Export</string>
    <string name="menu_timeLog">Time Log</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
</resources>